tests/integration/snapshots/integration__commands__format__preferred_width_below_threshold.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--preferred-width", "22"]
status: 0
success: true
stdin ---
[1,2,3,4,5,"helllllllooooooo"]
stdout ---
[
  1,
  2,
  3,
  4,
  5,
  "helllllllooooooo"
]

stderr ---
