tests/integration/snapshots/integration__commands__format__uglify_ARRAYS_NESTED_FIVE_LEVELS_WITH_OBJECT.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[[[[[
    {
        "depth": 5,
        "payload": ["text", 42, {"inner": true}, [null, false]],
        "meta": {"notes": "deep array"}
    }
]]]]]
stdout ---
[[[[[{"depth":5,"payload":["text",42,{"inner":true},[null,false]],"meta":{"notes":"deep array"}}]]]]]

stderr ---
