tests/integration/snapshots/integration__commands__format__uglify_ARRAY_BLANK_LINES_AND_EXTRA_WHITESPACE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[1,2 , 3

,

4 , 5        ,          6           ,7        ]
stdout ---
[1,2,3,4,5,6,7]

stderr ---
