tests/integration/snapshots/integration__commands__format__uglify_ARRAY_BOOLS_NULLS_OVER_80.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[true, false, null, true, false, null, true, false, null, true, false, null, true, false, null, true, false, null]
stdout ---
[true,false,null,true,false,null,true,false,null,true,false,null,true,false,null,true,false,null]

stderr ---
