tests/integration/snapshots/integration__commands__format__uglify_ARRAY_INLINE_THREE_SHORT_OBJECTS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[{"k":"v"},{"x":"y"},{"a":"b"}]
stdout ---
[{"k":"v"},{"x":"y"},{"a":"b"}]

stderr ---
