tests/integration/snapshots/integration__commands__format__uglify_ARRAY_NUMBERS_FILL_MIXED_LENGTHS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[12345,123434,343434,343434,3433434,34343434,34433434,34343434,343443,34433434,344334]
stdout ---
[12345,123434,343434,343434,3433434,34343434,34433434,34343434,343443,34433434,344334]

stderr ---
