tests/integration/snapshots/integration__commands__format__uglify_ARRAY_NUMBERS_WITH_EXPONENTS_FILL.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[1e10, 2e-3, 1.5e2, 12345, 1234567, 1e100, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
stdout ---
[1e10,2e-3,1.5e2,12345,1234567,1e100,1,2,3,4,5,6,7,8,9,10,11,12]

stderr ---
